--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -34,26 +34,14 @@
     </div>
   </div>
 
+
   <div class="flowTable" *ngIf="default_connector">
     <ag-grid-angular #agGrid3 style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      (rowSelected)="selectDefaultConnector()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="linkedConnectorColDef"
-      [rowData]="default_connector" [rowSelection]="rowSelection" (gridReady)="onDCGridReady($event)">
+      (rowSelected)="selectDefaultConnector()" [animateRows]="true" class="ag-theme-balham"
+      [columnDefs]="linkedConnectorColDef" [rowData]="default_connector" [rowSelection]="rowSelection"
+      (gridReady)="onDCGridReady($event)">
     </ag-grid-angular>
   </div>
-
-  <!-- <h1 class="flowTable" style="text-align: center;"> <u>{{ 'availableConnectors' | i18next }}</u> </h1>
-  <div class="row row-button">
-    <button mat-raised-button color="primary"
-      (click)="openAddConnectorModal('create')">{{ 'create' | i18next }}</button>
-    <button mat-raised-button (click)="openAddConnectorModal('update')">{{ 'update' | i18next }}</button>
-    <button mat-raised-button color="warn" (click)="deleteConnector()">{{ 'delete' | i18next }}</button>
-  </div> -->
-  <!-- <div class="flowTable">
-    <ag-grid-angular #agGrid style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-      (rowSelected)="selectAvaConnector()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-      [columnDefs]="connectorColDef" [rowData]="connectorData" (gridReady)="onGridConnectorReady($event)">
-    </ag-grid-angular>
-  </div> -->
 
   <div class="flowTable">
     <h1 style="text-align: center;" *ngIf="microFlow.length > 0"> <u>{{'microFlows'|i18next}}</u> </h1>
@@ -68,8 +56,9 @@
     </div>
     <div class="flowTable" *ngIf="microFlow.length > 0">
       <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
-        (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true" class="ag-theme-balham"
-        [columnDefs]="microColDef" [rowData]="microFlow" (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
+        (selectionChanged)="onSelectionMFChange()" [rowSelection]="rowSelection" [animateRows]="true"
+        class="ag-theme-balham" [columnDefs]="microColDef" [rowData]="microFlow"
+        (gridReady)="onGridMicroFlowReady($event)"></ag-grid-angular>
     </div>
   </div>
 </div>
@@ -83,10 +72,11 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">{{'componentName' | i18next}}</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" hidden id="_id" [(ngModel)]="dconnector._id"
-                  formControlName="_id">
+                <input type="text" class="form-control" placeholder="enter Dev Framework" hidden id="_id"
+                  [(ngModel)]="dconnector._id" formControlName="_id">
                 <input type="text" class="form-control" placeholder="Enter component name" id="component_name"
-                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                  formControlName="component_name" [(ngModel)]="iFlowComponent.component_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -97,7 +87,8 @@
               <div class="form-group">
                 <label for="label">{{'label'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="{{'placeholder_label' | i18next}}" id="label"
-                  formControlName="label" [(ngModel)]="iFlowComponent.label" [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
+                  formControlName="label" [(ngModel)]="iFlowComponent.label"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.label.errors }">
                 <div *ngIf="submitted && form_control.label.errors" class="invalid-feedback">
                   <div *ngIf="form_control.label.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -109,8 +100,8 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="type">{{'type'| i18next}}</label>
-                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type" [(ngModel)]="iFlowComponent.type"
-                  [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
+                <input class="form-control" id="type" placeholder="Enter Type" formControlName="type"
+                  [(ngModel)]="iFlowComponent.type" [ngClass]="{ 'is-invalid': submitted && form_control.type.errors }">
                 <div *ngIf="submitted && form_control.type.errors" class="invalid-feedback">
                   <div *ngIf="form_control.type.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -119,8 +110,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="sequence_id">{{'sequenceId'| i18next}}</label>
-                <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id" [(ngModel)]="iFlowComponent.sequence_id"
-                  formControlName="sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
+                  [(ngModel)]="iFlowComponent.sequence_id" formControlName="sequence_id"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">should not be empty</div>
                 </div>
@@ -131,8 +123,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="dev_language">{{'devLang'| i18next}}</label>
-                <input class="form-control" id="dev_language" placeholder="Enter Dev Language" formControlName="dev_language"
-                  [(ngModel)]="iFlowComponent.dev_language" [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
+                <input class="form-control" id="dev_language" placeholder="Enter Dev Language"
+                  formControlName="dev_language" [(ngModel)]="iFlowComponent.dev_language"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_language.errors }">
                 <div *ngIf="submitted && form_control.dev_language.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_language.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -142,7 +135,8 @@
               <div class="form-group">
                 <label for="dev_framework">{{'devFramework'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="dev_framework"
-                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework" [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
+                  [(ngModel)]="iFlowComponent.dev_framework" formControlName="dev_framework"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.dev_framework.errors }">
                 <div *ngIf="submitted && form_control.dev_framework.errors" class="invalid-feedback">
                   <div *ngIf="form_control.dev_framework.errors.required">should not be empty</div>
                 </div>
@@ -153,8 +147,10 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{ 'description' | i18next }}</label>
-                <textarea class="form-control" rows="1" id="description" placeholder="{{'placeholder_description' | i18next}}"
-                  formControlName="description" [(ngModel)]="iFlowComponent.description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
+                <textarea class="form-control" rows="1" id="description"
+                  placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
+                  [(ngModel)]="iFlowComponent.description"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }"></textarea>
                 <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                   <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                 </div>
@@ -164,8 +160,9 @@
               <div class="form-group">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" formControlName="connector" [checked]="iFlowComponent.connector"
-                      [(ngModel)]="iFlowComponent.connector" value="">{{'connector'|i18next}}</label>
+                    <input type="checkbox" class="form-check-input" formControlName="connector"
+                      [checked]="iFlowComponent.connector" [(ngModel)]="iFlowComponent.connector"
+                      value="">{{'connector'|i18next}}</label>
                 </div>
               </div>
             </div>
@@ -174,12 +171,15 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="isDisableFlowComp">
-          <button type="button" class="btn button-create" (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="createFlowComponent()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!isDisableFlowComp">
-          <button type="button" class="btn button-create" (click)="updateFlowCompModel()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="updateFlowCompModel()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
@@ -195,16 +195,18 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="name">{{'name'| i18next}}</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" id="name" [(ngModel)]="dconnector.name"
-                  formControlName="name" [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
+                <input type="text" class="form-control" placeholder="enter Dev Framework" id="name"
+                  [(ngModel)]="dconnector.name" formControlName="name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
               </div>
             </div>
 
             <div class="col-md-6">
               <div class="form-group">
                 <label for="description">{{'description'| i18next}}</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" id="description" [(ngModel)]="dconnector.description"
-                  formControlName="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+                <input type="text" class="form-control" placeholder="enter Dev Framework" id="description"
+                  [(ngModel)]="dconnector.description" formControlName="description"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
               </div>
             </div>
           </div>
@@ -213,8 +215,9 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="url">{{'url'| i18next}}</label>
-                <input type="text" class="form-control" placeholder="enter Dev Framework" id="url" [(ngModel)]="dconnector.url"
-                  formControlName="url" [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
+                <input type="text" class="form-control" placeholder="enter Dev Framework" id="url"
+                  [(ngModel)]="dconnector.url" formControlName="url"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
               </div>
             </div>
           </div>
@@ -250,11 +253,13 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="isDisplayDConnector">
-          <button type="button" class="btn button-create" (click)="addDefaultConnector()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="addDefaultConnector()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!isDisplayDConnector">
-          <button type="button" class="btn button-create" (click)="updateDefaultConnector()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-create"
+            (click)="updateDefaultConnector()">{{ 'update' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandledUpdate()">{{ 'cancel' |
             i18next }}</button>
         </div>
@@ -265,7 +270,7 @@
 
 
 
-<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addConnectorModel}">
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addConnectorModel}">
   <div class="modal-dialog modal-md" role="dialog">
     <div class="modal-content">
       <div class="container">
@@ -288,7 +293,7 @@
             </div>
           </div>
 
-           <div class="row">
+          <div class="row">
             <div class="col-md-6">
               <div class="form-group">
                 <label for="url">{{'url'| i18next}}</label>
@@ -354,7 +359,8 @@
               <div class="form-group">
                 <label for="sequence_id">{{'sequenceId'| i18next}}</label>
                 <input type="number" class="form-control" placeholder="Enter Sequence Id" id="sequence_id"
-                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id" [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
+                  formControlName="sequence_id" [(ngModel)]="iMicroFlow.sequence_id"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.sequence_id.errors }">
                 <div *ngIf="submitted && form_control.sequence_id.errors" class="invalid-feedback">
                   <div *ngIf="form_control.sequence_id.errors.required">{{'require_name' | i18next}}</div>
                 </div>
@@ -364,8 +370,10 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="component_name">{{'componentName'|i18next}}</label>
-                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name" [value]="selectedFlowCmpnt[0]?.component_name"
-                  disabled formControlName="component_name" [(ngModel)]="iMicroFlow.component_name" [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
+                <input type="text" class="form-control" placeholder="Enter Component Name" id="component_name"
+                  [value]="selectedFlowCmpnt[0]?.component_name" disabled formControlName="component_name"
+                  [(ngModel)]="iMicroFlow.component_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.component_name.errors }">
                 <div *ngIf="submitted && form_control.component_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.component_name.errors.required">{{'require_label' | i18next}}</div>
                 </div>
@@ -378,7 +386,8 @@
               <div class="form-group">
                 <label for="micro_flow_step_name">{{'microFlowName'|i18next}}</label>
                 <textarea class="form-control" rows="1" id="micro_flow_step_name" placeholder="Enter Micro Flow Name"
-                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name" [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
+                  formControlName="micro_flow_step_name" [(ngModel)]="iMicroFlow.micro_flow_step_name"
+                  [ngClass]="{ 'is-invalid': submitted && form_control.micro_flow_step_name.errors }"></textarea>
                 <div *ngIf="submitted && form_control.micro_flow_step_name.errors" class="invalid-feedback">
                   <div *ngIf="form_control.micro_flow_step_name.errors.required">{{'require_description' | i18next}}
                   </div>
@@ -395,7 +404,8 @@
         </div>
         <div class="form-group" *ngIf="!isDisplayMicroFlow">
           <button type="button" class="btn button-create" (click)="updateMicroFlow()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-close"
+            (click)="onCloseMFHandledUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
