--- a/application/clients/desktop/src/app/connector-manager/connector-manager.component.scss
+++ b/application/clients/desktop/src/app/connector-manager/connector-manager.component.scss
@@ -4,17 +4,13 @@ modal {
 
     .modal {
         display: block;
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        overflow: auto;
+        border-radius: 20px;
         .modal-body {
-            padding: 20px;
             background: #fff;
             margin: 40px;
+            border: 1px solid;
+            border-radius: 10px;
+            padding: 10px;
         }
     }
 }
