--- a/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
+++ b/application/clients/desktop/src/app/entity-manager/entity-manager.component.html
@@ -8,7 +8,7 @@
   <br />
   <div>
     <mat-accordion>
-      <!-- <mat-expansion-panel [expanded]="true">
+      <mat-expansion-panel [expanded]="true">
         <mat-expansion-panel-header>
           <mat-panel-title> My Application Features </mat-panel-title>
         </mat-expansion-panel-header>
@@ -33,24 +33,24 @@
             No Feature Available.
           </div>
         </div>
-      </mat-expansion-panel> -->
+      </mat-expansion-panel>
       <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <mat-panel-title> Default Entity </mat-panel-title>
-          </mat-expansion-panel-header>
-          <div style="padding-right: 20px;">
-          </div>
-          <div class="row" style="margin: 0px;">
-            <div class="col-md-4" *ngFor="let defaultEntity of selecteddefaultEntity; let i = index">
-              <div class="card">
-                <div class="card-header">{{defaultEntity.user_name}}</div>
-                <div class="card-body">
-                  <div><span>{{defaultEntity.project_name}}</span></div>
-                </div>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Default Entity </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div style="padding-right: 20px;">
+        </div>
+        <div class="row" style="margin: 0px;">
+          <div class="col-md-4" *ngFor="let defaultEntity of selecteddefaultEntity; let i = index">
+            <div class="card">
+              <div class="card-header">{{defaultEntity.user_name}}</div>
+              <div class="card-body">
+                <div><span>{{defaultEntity.project_name}}</span></div>
               </div>
             </div>
           </div>
-        </mat-expansion-panel>
+        </div>
+      </mat-expansion-panel>
       <mat-expansion-panel>
         <mat-expansion-panel-header>
           <mat-panel-title>
@@ -155,7 +155,8 @@
 </div>
 
 
-<div class="modal" tabindex="-1" data-keyboard="true" aria-hidden="true" data-backdrop="true" role="dialog" [ngStyle]="{'top': '100px','display':displayFeatureModel}">
+<div class="modal" tabindex="-1" data-keyboard="true" aria-hidden="true" data-backdrop="true" role="dialog"
+  [ngStyle]="{'top': '100px','display':displayFeatureModel}">
   <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
       <div class="modal-body">
@@ -163,13 +164,13 @@
           <h1>Add Feature</h1>
           <div class="row">
             <div class="radio mr-sm-4">
-              <label><input type="radio" name="selectFeature" [value]="false" (change)="onChangeRadio($event.target.value)"
-                  [(ngModel)]="selectFeature">Import
+              <label><input type="radio" name="selectFeature" [value]="false"
+                  (change)="onChangeRadio($event.target.value)" [(ngModel)]="selectFeature">Import
                 Existing Feature</label>
             </div>
             <div class="radio">
-              <label><input type="radio" name="selectFeature" (change)="onChangeRadio($event.target.value)" [value]="true"
-                  [(ngModel)]="selectFeature">Add New
+              <label><input type="radio" name="selectFeature" (change)="onChangeRadio($event.target.value)"
+                  [value]="true" [(ngModel)]="selectFeature">Add New
                 Feature</label>
             </div>
           </div>
@@ -177,7 +178,8 @@
             <div class="form-group">
               <label for="sel1">Import Existing Feature:</label>
               <select class="form-control" (change)="onChange($event.target.value)">
-                <option *ngFor="let feature of featureData" value="{{feature.name}}" ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
+                <option *ngFor="let feature of featureData" value="{{feature.name}}"
+                  ([ngModel])="selectedExistingFeature">{{feature.name}}</option>
               </select>
             </div>
           </div>
@@ -192,7 +194,8 @@
             </div>
             <div class="form-group">
               <label for="description">Description</label>
-              <ckeditor [editor]="Editor" name="description" id="editor" (ready)="onReady($event)" [(ngModel)]="features.description"></ckeditor>
+              <ckeditor [editor]="Editor" name="description" id="editor" (ready)="onReady($event)"
+                [(ngModel)]="features.description"></ckeditor>
               <!--   use this inside ckeditor tag for image upload replace your api with uploadUrl [config]="{ ckfinder :{uploadUrl: 'https://your-organization-id.cke-cs.com/easyimage/upload/'}}" -->
             </div>
           </form>
