--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -34,10 +34,11 @@
     </div>
   </div>
 
+  
   <div class="flowTable" *ngIf="default_connector">
     <ag-grid-angular #agGrid3 style=" width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef"
       (rowSelected)="selectDefaultConnector()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="linkedConnectorColDef"
-      [rowData]="default_connector" [rowSelection]="rowSelection" (gridReady)="onDCGridReady($event)">
+      [rowData]="default_connector" [suppressCellSelection]="!suppressCellSelection" [rowSelection]="rowSelection" (gridReady)="onDCGridReady($event)">
     </ag-grid-angular>
   </div>
 
@@ -190,34 +191,74 @@
   <div class="modal-dialog modal-md" role="dialog">
     <div class="modal-content">
       <div class="container">
-        <form class="m-3" [formGroup]="createDConnectorForm">
-          <div class="row">
+        <form class="m-3">
+            <div class="row">
+                <div class="radio mr-sm-4">
+                  <label><input type="radio" name="selectConnector" [value]="false" 
+                      [(ngModel)]="selectConnector">Default Connectors</label>
+                </div>
+                <!-- (change)="onChangeRadio($event.target.value)" -->
+                <div class="radio">
+                  <label><input type="radio" name="selectConnector" [value]="true"
+                      [(ngModel)]="selectConnector">Available Connectors</label>
+                </div>
+              </div>
+              <div *ngIf="selectConnector" class="dropdown mt-sm-2 mb-sm-2">
+                  <div class="form-group">
+                    <label for="sel1">Select Available Connector:</label>
+                    <select class="form-control" (change)="onChange($event.target.value)">
+                      <option *ngFor="let avaConnector of AvailableConnector" value="{{avaConnector.name}}" ([ngModel])="selectedAvaConnector">{{avaConnector.name}}</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="row">
+                    <div class="radio mr-sm-4" *ngIf="!selectConnector">
+                      <label><input type="radio" name="enableDConnector" [value]="false" 
+                          [(ngModel)]="enableDConnector">Disable</label>
+                    </div>
+                    <!-- (change)="onChangeRadio($event.target.value)" -->
+                    <div class="radio" *ngIf="!selectConnector">
+                      <label><input type="radio" name="enableDConnector" [value]="true"
+                          [(ngModel)]="enableDConnector">Enable</label>
+                    </div>
+                  </div>
+                  
+                <div *ngIf="!selectConnector" class="dropdown mt-sm-2 mb-sm-2">
+                    <div class="form-group">
+                      <label for="sel1"></label>
+                      <select class="form-control" [disabled]="!enableDConnector" (change)="onChange($event.target.value)">
+                        <option *ngFor="let DCon of default_connector" value="{{DCon.name}}" ([ngModel])="selectedDCon">{{DCon.name}}</option>
+                      </select>
+                    </div>
+                  </div>
+          <!-- <div class="row">
             <div class="col-md-6">
-              <div class="form-group">
+              <div class="form-group"  *ngIf="!selectConnector">
                 <label for="name">{{'name'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="name" [(ngModel)]="dconnector.name"
-                  formControlName="name" [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
+                  name="name" [ngClass]="{ 'is-invalid': submitted && form_control.name.errors }">
               </div>
             </div>
 
             <div class="col-md-6">
-              <div class="form-group">
+              <div class="form-group" *ngIf="!selectConnector">
                 <label for="description">{{'description'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="description" [(ngModel)]="dconnector.description"
-                  formControlName="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+                  name="description" [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-6">
-              <div class="form-group">
+              <div class="form-group" *ngIf="selectConnector">
                 <label for="url">{{'url'| i18next}}</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="url" [(ngModel)]="dconnector.url"
-                  formControlName="url" [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
+                  name="url" [ngClass]="{ 'is-invalid': submitted && form_control.url.errors }">
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- <div class="form-group">
             <div class="row">
               <div class="col-md-12">
@@ -250,7 +291,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="isDisplayDConnector">
-          <button type="button" class="btn button-create" (click)="addDefaultConnector()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-create" (click)="addDefaultConnector()">Add</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!isDisplayDConnector">
