--- a/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
+++ b/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.html
@@ -1,16 +1,16 @@
 <mat-expansion-panel>
   <mat-expansion-panel-header>
     <mat-panel-title>
-      Connector Configuration
+      Technical Architecture
     </mat-panel-title>
   </mat-expansion-panel-header>
   <div style="padding-right: 20px;">
-    <button class="createEntityButton" mat-raised-button color="primary" (click)="openModal('add-prop')">Create
-      Entity</button>
+    <!-- <button class="createEntityButton" mat-raised-button color="primary" (click)="openModal('add-prop')">Create
+      Entity</button> -->
   </div>
 </mat-expansion-panel>
 
-<modal id="add-prop">
+<!-- <modal id="add-prop">
   <div class="modal">
     <div class="modal-body">
       <form class="m-3" [formGroup]="connectorForm">
@@ -57,7 +57,6 @@
                   <input type="text" class="form-control" formControlName="value" placeholder="Item name">
                 </div>
               </div>
-              <!-- <button class="btn btn-danger" type="button" (click)="deleteFieldValue(i)">Delete</button> -->
             </div>
           </div>
         </div>
@@ -72,4 +71,4 @@
       </div>
     </div>
   </div>
-</modal>
+</modal> -->
