--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -1,10 +1,7 @@
 <div class="container">
   <h1 class="flowTable" style="text-align: center;"> <u>{{ 'availableConnectors' | i18next }}</u> </h1>
   <div class="row row-button">
-    <!-- <button mat-raised-button color="primary"
-      (click)="openAddConnectorModal('create')">{{ 'create' | i18next }}</button> -->
-    <button mat-raised-button color="primary" (click)="onShowAPI()"> Show Available Apis </button>
-    <!-- <button mat-raised-button (click)="openAddConnectorModal('update')">{{ 'update' | i18next }}</button> -->
+    <button mat-raised-button color="primary" (click)="onShowAPI()"> View/Update Connectors </button>
     <button mat-raised-button color="warn" (click)="deleteConnector()">{{ 'delete' | i18next }}</button>
   </div>
   <div class="flowTable">
@@ -15,7 +12,7 @@
   </div>
 </div>
 
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addConnectorModel}">
+<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addConnectorModel}">
   <div class="modal-dialog modal-md" role="dialog">
     <div class="modal-content">
       <div class="container">
@@ -90,24 +87,100 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':showApiModal}">
-  <div class="modal-dialog modal-md" role="dialog">
+  <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
       <div class="modal-header">
         <div class="title">
           Available APIs/Methods
         </div>
       </div>
-      <div class="modal-body" style="height: 300px; overflow-x: scroll;">
-        <h4>Categories</h4>
-        <ul *ngIf="selectedAvaConnector.length > 0" >
-          <li *ngFor="let api of selectedAvaConnector[0]?.available_apis">{{api.type}} <b>{{api.name}}</b> {{api.description}}</li>
-        </ul>
+      <div class="modal-body" style="min-height: 200px; max-height: 300px; overflow-x: scroll;">
+        <div class="m-3">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">{{'name'| i18next}}</label>
+                <input type="text" class="form-control" placeholder="enter Dev Framework" id="name"
+                  [(ngModel)]="connector.name">
+              </div>
+              <div class="form-group">
+                <label for="url">{{'url'| i18next}}</label>
+                <input type="text" class="form-control" placeholder="enter Dev Framework" id="url"
+                  [(ngModel)]="connector.url">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="description">{{'description'| i18next}}</label>
+                <textarea rows="5" type="text" class="form-control" placeholder="enter Dev Framework" id="description"
+                  [(ngModel)]="connector.description"></textarea>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-12">
+                <h4>APIs and Methods</h4>
+              </div>
+              <div class="col-md-6">
+                <div *ngIf="selectedAvaConnector.length > 0"
+                  style="height: 250px; overflow-x: scroll; border: 1px solid black;">
+                  <div *ngFor="let apis of connector.available_apis; let i = index;">
+                    <div class="col-md-1">
+                      <input name="apis" (click)="selectAvaConProp(apis, i)" type="radio" />
+                    </div>
+                    <div class="col-md-10" style="padding: 0px 5px;">
+                      <label>{{ apis.type }} <b>{{apis.name}}</b> {{apis.description}}</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="row" *ngIf="!selectedApiCon">
+                  <button class="btn btn-primary" type="button" (click)="addProperties()">Add Connector
+                    Properties</button>
+                  <div class="col-md-12" style="padding: 0px"
+                    *ngFor="let properties of connector.properties; let i = index;">
+                    <div class="col-md-6 form-group">
+                      <label *ngIf="i === 0" for="key">Key</label>
+                      <input [(ngModel)]="properties.key" type="text" class="form-control" placeholder="Item name">
+                    </div>
+                    <div class="col-md-6 form-group">
+                      <label *ngIf="i === 0" for="value">Value</label>
+                      <input type="text" [(ngModel)]="properties.value" disabled class="form-control"
+                        placeholder="Key value entered by user">
+                    </div>
+                  </div>
+                </div>
+                <div class="row" *ngIf="selectedApiCon">
+                  <button class="btn btn-primary" type="button" (click)="addAPIProperties()">Add APIs
+                    Properties</button>
+                  <div class="col-md-12" style="padding: 0px"
+                    *ngFor="let properties of connector.available_apis[selcetedIndex].properties; let i = index;">
+                    <div class="col-md-6 form-group">
+                      <label *ngIf="i === 0" for="key">Key</label>
+                      <input [(ngModel)]="properties.key" type="text" class="form-control" placeholder="Item name">
+                    </div>
+                    <div class="col-md-6 form-group">
+                      <label *ngIf="i === 0" for="value">Value</label>
+                      <input type="text" [(ngModel)]="properties.value" disabled class="form-control"
+                        placeholder="Key value entered by user">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <div class="form-group">
+          <button type="button" class="btn button-create" (click)="createConnector()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="closeModal()"> Close</button>
         </div>
       </div>
