--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -12,83 +12,6 @@
   </div>
 </div>
 
-<!-- <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addConnectorModel}">
-  <div class="modal-dialog modal-md" role="dialog">
-    <div class="modal-content">
-      <div class="container">
-        <form class="m-3">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="name">{{'name'| i18next}}</label>
-                <input type="text" class="form-control" placeholder="Enter Name" id="name" name="name"
-                  [(ngModel)]="connector.name">
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="description">{{'description'| i18next}}</label>
-                <input type="text" class="form-control" placeholder="Enter Description" id="description"
-                  name="description" [(ngModel)]="connector.description">
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="url">{{'url'| i18next}}</label>
-                <input class="form-control" id="url" placeholder="Enter URL" name="url" [(ngModel)]="connector.url">
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="form-group">
-                  <button class="btn btn-primary" type="button" (click)="addFieldValue()">Add</button>
-                  <span class="msgSpace">Click to add a properties</span>
-                  <table class="table table-striped table-bordered">
-                    <tbody>
-                      <tr *ngFor="let field of fieldArray; let i = index">
-                        <td>
-                          <input class="form-control" id="url" placeholder="Enter URL" name="key-{{i}}"
-                            [(ngModel)]="field.key">
-                        </td>
-                        <td>
-                          <input class="form-control" id="url" placeholder="Enter URL" name="value-{{i}}"
-                            [(ngModel)]="field.value">
-                        </td>
-
-                        <td>
-                          <button class="btn btn-danger" type="button" (click)="deleteFieldValue(i)">Delete</button>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <div class="form-group" *ngIf="isDisplayConnector">
-          <button type="button" class="btn button-create" (click)="createConnector()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close"
-            (click)="onCloseConnectorHandled()">{{ 'cancel' | i18next }}</button>
-        </div>
-        <div class="form-group" *ngIf="!isDisplayConnector">
-          <button type="button" class="btn button-create" (click)="updateConnector()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseConnectorHandledUpdate()">{{ 'cancel' |
-              i18next }}</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':showApiModal}">
   <div class="modal-dialog modal-lg" role="dialog">
     <div class="modal-content">
@@ -132,7 +55,7 @@
                   style="height: 250px; overflow-x: scroll; border: 1px solid black;">
                   <div *ngFor="let apis of connector.available_apis; let i = index;">
                     <div class="col-md-1">
-                      <input name="apis" (click)="selectAvaConProp(apis, i)" type="radio" />
+                      <input name="apisradio" (click)="selectAvaConProp(apis, i)" type="radio" />
                     </div>
                     <div class="col-md-10" style="padding: 0px 5px;">
                       <label>{{ apis.type }} <b>{{apis.name}}</b> {{apis.description}}</label>
