--- a/application/clients/desktop/src/app/component-flows/component-flows.component.html
+++ b/application/clients/desktop/src/app/component-flows/component-flows.component.html
@@ -214,12 +214,35 @@
               </select>
             </div>
             <div class="form-group" *ngIf="selectedAvaConnector">
+              <label for="sel1">Enter Key Values for Connector Properties:</label>
+              <select class="form-control" [(ngModel)]="selectedAvaConnectorProp">
+                <option *ngFor="let avaMethod of selectedAvaConnector.properties" [ngValue]="avaMethod">
+                  {{avaMethod.key}}</option>
+              </select>
+              <input type="text" *ngIf="selectedAvaConnectorProp" class="form-control"
+                placeholder="enter {{selectedAvaConnectorProp.key}} value" id="description"
+                [(ngModel)]="selectedAvaConnectorProp.value" name="description"
+                [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
+            </div>
+            <div class="form-group" *ngIf="selectedAvaConnector">
               <label for="sel1">Select Methods/APIs:</label>
               <select class="form-control" [(ngModel)]="selectedAvaConnectorMethod"
                 (change)="onSelectAvaConnectorMethod()">
                 <option *ngFor="let avaMethod of selectedAvaConnector.available_apis" [ngValue]="avaMethod">
                   {{avaMethod.name}} {{avaMethod.description}}</option>
               </select>
+            </div>
+            <div class="form-group" *ngIf="selectedAvaConnectorMethod">
+              <label for="sel1">Enter Key Values for Method/API:</label>
+              <select class="form-control" [(ngModel)]="selectedAvaConnectorMethodApi"
+                (change)="onSelectAvaConnectorMethodProp()">
+                <option *ngFor="let avaMethod of selectedAvaConnectorMethod.properties" [ngValue]="avaMethod">
+                  {{avaMethod.key}}</option>
+              </select>
+              <input type="text" *ngIf="selectedAvaConnectorMethodApi" class="form-control"
+                placeholder="enter {{selectedAvaConnectorMethodApi.key}} value" id="description"
+                [(ngModel)]="selectedAvaConnectorMethodApi.value" name="description"
+                [ngClass]="{ 'is-invalid': submitted && form_control.description.errors }">
             </div>
           </div>
 
