Service integrated for default connector

--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -30,7 +30,7 @@
                   [(ngModel)]="connector.name">
               </div>
               <div class="form-group">
-                <label for="url">{{'url'| i18next}}</label>
+                <label for="url">End Point</label>
                 <input type="text" class="form-control" placeholder="enter Dev Framework" id="url"
                   [(ngModel)]="connector.url">
               </div>
