--- a/application/clients/desktop/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktop/src/app/project-component/project-component.component.scss
@@ -17,7 +17,12 @@
 .modal-dialog{
   overflow-y: initial !important
 }
-.modal-body{
+.feature .modal-body{
   height: 400px;
+  overflow-y: auto;
+}
+
+.delete .modal-body {
+  height: 70px;
   overflow-y: auto;
 }
